<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserva_de_parqueadero"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:gravity="center"
                android:visibility="visible"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TextView
                    android:id="@+id/alert_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/reserva_par_sele"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/alert_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/alert_message"
                    android:visibility="gone"
                    android:background="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_below="@+id/alert_view"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bnt_alert1_no"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:backgroundTint="@color/colorprimary"/>

                    <Button
                        android:id="@+id/bnt_alert1_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:text="@string/si"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:backgroundTint="@color/colorprimary"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>